fixed some alignment and colors

--- a/src/App.css
+++ b/src/App.css
@@ -11,16 +11,18 @@ body {
  
 }
 .templelogo {
-  width: 80px;  /* You can use px, %, em, rem, etc. */
-  height: auto;  /* Keeps aspect ratio */
+  width: 85px; 
+  height: auto;
 }
 
 
 .scroll-container {
-  max-height: 200px;  /* Limits height to 200px */
-  overflow-y: auto;  /* Enables vertical scrolling */
+  max-height: 200px; 
+  overflow-y: auto;  
   padding: 10px;
-  width: 250px;  /* Adjust width as needed */
+  margin: auto;
+  margin-top: 20px;
+  width: 250px;  
 }
 
 
@@ -76,11 +78,10 @@ body {
   gap: 20px;
   padding: 10px;
   column-gap: 30px;
+  margin-bottom: 15px;
 }
 
 .container > div {
-  /* background-color: #0c1b7c9e; */
-  /* border: 5px solid #08346d81; */
   padding: 50px;
   border-style: solid;
   border-color: #ffffff;
@@ -96,8 +97,10 @@ ul {
   margin: 0;              
 }
 
+
+
 button {
-  background-color: #ffffff; /* Light blue */
+  background-color: #ffffff; 
   color: #60101d;
   border: none;
   padding-left: 20px;
@@ -107,10 +110,28 @@ button {
   cursor: pointer;
   margin-right: 5px;
   margin-left: 5px;
-  margin-top: 10px;
+  margin-top: 15px;
   transition: background-color 0.3s ease;
 }
 
 button:hover {
   background-color: #b5969b;
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #60101d; 
+  border-radius: 10px;
+  border:3px solid #ffffff; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9d7078;
 }
